--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,17 +16,13 @@
         <div class="collapse navbar-toggleable-md" id="navbarResponsive"> 
       <%= link_to 'Flixter83', root_url, class: 'navbar-brand' %> 
         ul class="nav navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mr-auto mt-2 mt-md-0"> 
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <%= link_to 'See All Courses', courses_path, class: 'nav-link' %>
             </li>
           </ul>
-          <ul class="nav navbar-nav float-lg-right">
+          <ul class="navbar-nav">
             <% if user_signed_in? %>
               <li class="nav-item"><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
             <% else %>
