--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -2,7 +2,7 @@
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center"><%= @course.title %></h1>
   <br />
-  <%= lin_to 'Preview as Student...', course_path(@course), class: 'btn btn-warning float-right' %>
+  <%= link_to 'Preview as Student...', course_path(@course), class: 'btn btn-warning float-right' %>
   <br class="clr" />
 
   <div class="text-center"> 
