--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,11 +2,11 @@
 
 
 <div class="booyah-box col-10 offset-1"> 
-  <h1><%= @course.title %></h1> 
-  <%= image_tag @course.image, class: 'img-fluid' %> 
+  <h1><%= @course.title %></h1>  
   <br />
   <div class="row"> 
   <div class="col-sm-4 col-12 text-center"> 
+  	<%= image_tag course.image.to_s, class: 'img-fluid' %> 
 	<span class="badge badge-default"> 
 	<%= number_to_currency @course.cost %>
 	</span>
