--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -6,7 +6,7 @@
   <br />
   <div class="row"> 
   <div class="col-sm-4 col-12 text-center"> 
-  	<%= image_tag course.image.to_s, class: 'img-fluid' %> 
+  	<%= image_tag @course.image.to_s, class: 'img-fluid' %> 
 	<span class="badge badge-default"> 
 	<%= number_to_currency @course.cost %>
 	</span>
