--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -8,8 +8,8 @@
 	</p>
 
 
- <video id="my-video" class="video-js vjs-big-play-centered" controls preload="auto" width="640" height="264"
-  poster="MY_VIDEO_POSTER.jpg" data-setup="{}">
+ <video id="my-video" class="video-js vjs-big-play-centered vjs-fluid" controls preload="auto"
+  poster="<%= image_path('black.jpg') %>" data-setup="{}">
     <source src="<%= current_lesson.video.to_s%>" type='video/mp4'>
     <noscript>
     <p class="vjs-no-js">
@@ -18,7 +18,4 @@
     </p>
 	</noscript>
   </video>
-
-
-	<%= link_to 'Video', current_lesson.video.to_s %> 
 </div> 
