--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,7 +1,7 @@
 <br />
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center"><%= current_course.title %></h1>
-    <%= image_tag current_course.image, class: 'img-fluid' %>
+    <%= image_tag current_course.image.to_s, class: 'img-fluid' %>
   <br />
   <%= link_to 'Preview as Student...', course_path(current_course), class: 'btn btn-warning float-right' %>
   <br class="clr" />
@@ -18,7 +18,7 @@
   	  	<%= section.title %>
   	  	<%= link_to 'New Lesson', new_instructor_course_section_path(section), class: 'float-right btn btn-primary btn-sm' %>
   	  	<ul>
-  	  	   <% section.lessons.each do |lesson| %>
+  	  	   <% section.lessons.rank(:row_order).each do |lesson| %>
   	  	     <li>
   	  	     	<b><%= lesson.title %></b>
   	  	     	<%= lesson.subtitle %> 
