--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -12,6 +12,19 @@
     }); 
   }); 
 </script>
+<script>
+  $(function() {
+    $('.sections').sortable({
+     update: function( event, ui ) {
+        $.ajax({
+          type: 'PUT',
+          url: ui.item.data('update-url'),
+          dataType: 'json',
+          data: { section: { row_order_position: ui.item.index() } }
+        });
+      }
+    }); 
+  }); 
 
 
 <br />
@@ -29,7 +42,7 @@
 
 
   <ul>
-  	<% current_course.sections.each do |section| %>
+  	<% current_course.sections.rank(:row_order).each do |section| %>
   	  <li>
   	  	<%= section.title %>
   	  	<%= link_to 'New Lesson', new_instructor_course_section_path(section), class: 'float-right btn btn-primary btn-sm' %>
