--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -25,7 +25,7 @@
       }
     }); 
   }); 
-
+</script>
 
 <br />
 <div class="booyah-box col-10 offset-1">
@@ -41,22 +41,40 @@
   </div>
 
 
-  <ul>
+  <ul class="sections">
   	<% current_course.sections.rank(:row_order).each do |section| %>
-  	  <li>
+  	  <li data-update-url="<%= instructor_section_path section %>" class="section-li"> 
+        <div class="header float-left">
+          <span class="fa fa-ellipsis-v"></span> 
   	  	<%= section.title %>
+      </div>
   	  	<%= link_to 'New Lesson', new_instructor_course_section_path(section), class: 'float-right btn btn-primary btn-sm' %>
+        <br class="clr" />
+        <br class="clr" />
   	  	<ul class= "lessons">
   	  	   <% section.lessons.rank(:row_order).each do |lesson| %>
-  	  	     <li data-update-url="<%= instructor_lesson_path(lesson) %>">  	  	     	<b><%= lesson.title %></b>
-  	  	     	<%= lesson.subtitle %> 
-  	  	     </li>
-  	  	    <% end %>
-  	  	 </ul>
-  	  	<br class="clr" /> 
-  	  </li>
-  	<% end %>
-  </ul>
-
+  	  	     <li data-update-url="<%= instructor_lesson_path(lesson) %>">
+            <div class="row">
+                <div class="col-1">
+                  <br />
+                  <span class="fa-ellipsis-v"></span>
+              </div>
+              <div class="col-11 text-center">
+              <p>
+              <<p>
+            <b><%= lesson.title %></b>
+          </p>
+          <p>
+            <%= lesson.subtitle %>
+          </p>
+        </div>
+      </div>
+    </li>
+  <% end %>
+</ul>
+  <br class="clr" />
+    </li>
+  <% end %>
+</ul>
 
 </div>  
