--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -139,6 +139,7 @@ ul .header .fa {
 	font-weight: 100; 
 	padding: 8px; 
 	font-size: 15px; 
+}
 
 .lessons li b {
 	font-size: 25px; 
@@ -148,4 +149,3 @@ ul .header .fa {
 .lessons li p {
 	margin: 0; 
 }
-end 
