--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -43,7 +43,7 @@
 
 
   <ul class="sections">
-  	<% current_course.sections.rank(:row_order_position).each do |section| %>
+  	<% current_course.sections.rank(:row_order).each do |section| %>
   	  <li data-update-url="<%= instructor_section_path (section) %>" class="section-li"> 
         <div class="header float-left">
           <span class="fa fa-ellipsis-v"></span> 
@@ -55,7 +55,7 @@
         <br class="clr" />
 
   	  	<ul class= "lessons">
-  	  	   <% section.lessons.rank(:row_order_positionnnnn).each do |lesson| %>
+  	  	   <% section.lessons.rank(:row_order).each do |lesson| %>
   	  	     <li data-update-url="<%= instructor_lesson_path(lesson) %>">
             <div class="row">
                 <div class="col-1">
